Projet GL/test/src/test/deca/context/valid/increment1/print-float2.deca
// Résultats : 3.2

// Historique :
//  cree le 05/01/2023

{
    float a;

    a = 3.2;
    println(a);
}