Projet GL/test/src/test/deca/context/invalid/increment2/float-plus-bool.deca
//test rule (3.33)

// Raison : Typage incompatibles

// Résultats : Ligne 15 "types incompatibles"

// Historique :
//  cree le 08/01/2023

{
    float f,g;
    boolean b;

    //Must be refused
    f = g + b;
}